# opencl-convolution

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  kernels.cl  main.c  result.csv  util.c  util.h
include/: convolution.hpp
include/CL/: opencl.hpp
src/: convolution.cpp  test.cpp
